# fpcard-slicer

./: .gitmodules  CMakeLists.txt  README.md
include/: image.h  parse_arguments.h  slicer.h
src/: image.cpp  main.cpp  parse_arguments.cpp  slicer.cpp
